add cursor and links

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,15 +1,10 @@
-<section class="section-about">
+<section class="section-about" id="about">
   <div class="container">
     <p class="about-pretitle">Tradition and love</p>
     <h2 class="about-title">How it’s made?</h2>
     <div class="about-image">
       <div class="about-image_circle"></div>
-      <img
-        src="./images/cow-desctop-1x.jpg"
-        alt="cow"
-        width="490"
-        height="490"
-      />
+      <img src="./images/cow-desctop-1x.jpg" alt="cow" width="490" height="490" />
     </div>
   </div>
   <div class="about-text">
