--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
-<header class="header">
+<header class="header" id="header">
     <div class="container header__container">
-        <a href="#">
+        <a href="#header">
             <picture class="header__logo">
                 <source srcset=" ./images/header-logo.png 1x, 
                     ./images/header-logo-2x.png 2x" media="(min-width: 1200px)" />
@@ -13,9 +13,9 @@
         </a>
         <nav class="header__nav">
             <ul class="header__list list">
-                <li class="header__items"><a class="header__link link" href="#">Home</a></li>
-                <li class="header__items"><a class="header__link link" href="#">How it’s made?</a></li>
-                <li class="header__items"><a class="header__link link" href="#">Our products</a></li>
+                <li class="header__items"><a class="header__link link" href="#header">Home</a></li>
+                <li class="header__items"><a class="header__link link" href="#about">How it’s made?</a></li>
+                <li class="header__items"><a class="header__link link" href="#products">Our products</a></li>
                 <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
             </ul>
         </nav>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="header-mobile visually-hidden" data-menu>
-        <a href="#">
+        <a href="#header">
             <picture class="header__logo">
                 <source srcset=" ./images/header-logo.png 1x, 
                     ./images/header-logo-2x.png 2x" media="(min-width: 1200px)" />
@@ -53,10 +53,11 @@
         </button>
         <nav class="header__mobile-nav">
             <ul class="header__mobile-list list">
-                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Home</a></li>
-                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">How it’s made?</a>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#header">Home</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#about">How it’s made?</a>
                 </li>
-                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Our products</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#products">Our products</a>
+                </li>
                 <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Contact</a></li>
             </ul>
         </nav>
