--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,8 +6,8 @@
                     made with<br>
                     passion</h1>
                 <ul class="hero__list list">
-                    <li class="hero__items"><a class="hero__link--poducts link" href="#">Products</a></li>
-                    <li class="hero__items"><a class="hero__link--made link" href="#">How it’s made?</a></li>
+                    <li class="hero__items"><a class="hero__link--poducts link" href="#products">Products</a></li>
+                    <li class="hero__items"><a class="hero__link--made link" href="#about">How it’s made?</a></li>
                 </ul>
             </div>
             <ul class="hero__statistic-list list">
