--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="section-products">
+<section class="section-products" id="products">
     <div class="container-products container">
         <p class="container-products_text">100% natural</p>
         <h2 class="container-products_header">products</h2>
@@ -20,7 +20,8 @@
             <li class="products-list_item products-list_item--coffee products-list_item--yellow">
                 <div class="products-list_top products-list_top--circle products-list_top--yellow">
                     <h3 class="product-list_title">ice coffee</h3>
-                    <p class="product-list_text">Fragrant invigorating drink created from 100% natural ingredients without
+                    <p class="product-list_text">Fragrant invigorating drink created from 100% natural ingredients
+                        without
                         the use of preservatives and flavor enhancers</p>
                 </div>
                 <div class="products-list_bottom">
@@ -34,7 +35,8 @@
             <li class="products-list_item products-list_item--shakes products-list_item--brown">
                 <div class="products-list_top products-list_top--circle products-list_top--brown">
                     <h3 class="product-list_title">milkshakes</h3>
-                    <p class="product-list_text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits,
+                    <p class="product-list_text">Sweet drinks based on milk and ice cream, supplemented with syrups,
+                        fruits,
                         berries and other sweets of your choice</p>
                 </div>
                 <div class="products-list_bottom">
