--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -20,6 +20,7 @@
 .header__logo {
   width: 40px;
   height: 37px;
+  cursor: url('../images/cursor-ice.png'), auto;
 
   @include tablet {
     width: 48px;
@@ -42,6 +43,7 @@
   font-size: 16px;
   line-height: calc(20 / 16);
   color: #fcfcfc;
+  cursor: url('../images/cursor-ice.png'), auto;
 
   &:hover,
   &:focus {
