--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -52,6 +52,13 @@
         </div>
       </div>
 
+      <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+        <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button"
+          aria-label="Go to slide 1" aria-current="true"></span><span class="swiper-pagination-bullet" tabindex="0"
+          role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0"
+          role="button" aria-label="Go to slide 3"></span>
+      </div>
+
     </div><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
   </div>
 </section>
