cursor to products

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -372,4 +372,5 @@
 .products-list_button {
     border: none;
     background-color: transparent;
+    cursor: url('../images/cursor-ice.png'), auto;
 }
