--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -1,5 +1,5 @@
 .customer-reviews {
-  padding: 30px;
+  padding: 20px;
   min-height: 100%;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -10,6 +10,12 @@
     background-image: url(../images/bg-mobile-2px-min.jpg);
   }
   @include tablet {
+    padding: 32px;
+    min-height: 100%;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-image: url(../images/bg-tab-1px-min.jpg);
 
     @include retina {
@@ -17,6 +23,13 @@
     }
   }
   @include desktop {
+    padding: 30px;
+    min-height: 100%;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
     background-image: url(../images/bg-desk-1px-min.jpg);
 
     @include retina {
@@ -37,11 +50,27 @@
   margin-bottom: 32px;
 }
 .image-slider__text {
-  max-width: 968px;
+  max-width: 280px;
   margin: 0 auto;
-  padding: 39px 109px;
+  padding: 35px 39px;
   background: #84a178;
-  border-radius: 24px;
+  border-radius: 10px;
+
+  @include tablet {
+    max-width: 705px;
+    margin: 0 auto;
+    padding: 20px 80px;
+    background: #84a178;
+    border-radius: 24px;
+  }
+
+  @include desktop {
+    max-width: 968px;
+    margin: 0 auto;
+    padding: 43px 109px;
+    background: #84a178;
+    border-radius: 24px;
+  }
 }
 
 .image-slider__text p {
