--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,30 +1,39 @@
-<section class="section-about">
+<section class="about" id="about">
   <div class="container">
     <p class="about-pretitle">Tradition and love</p>
     <h2 class="about-title">How it’s made?</h2>
-    <div class="about-image">
-      <div class="about-image_circle"></div>
-      <img
-        src="./images/cow-desktop-1x.png"
-        alt="cow"
-        width="490"
-        height="490"
-      />
+    <div class="about-image-text-btn">
+      <div class="about-image">
+        <div class="about-image__circle"></div>
+        <div class="about-image__item"></div>
+      </div>
+      <div class="about-text-btn">
+        <div class="about-text">
+          <p class="about-text__item">
+            Ice is a place where you will become not only a little happier, but
+            also healthier. Health is the main value for us, and we follow it
+            when creating our handmade desserts.
+          </p>
+
+          <p class="about-text__item">
+            We use traditional recipes and 100% natural ingredients. Our
+            products are so natural that they can be given to children from the
+            age of three years. Sweets lovers can expect 55 types of ice cream,
+            15 types of coffee and 23 milkshakes.
+          </p>
+          <p class="about-text__item">
+            This is enough to choose ice cream and coffee for any mood!
+          </p>
+        </div>
+        <div class="about__btn-nav">
+          <button type="button" class="btn about__btn">
+            Read more
+            <svg class="about__btn-icon" width="12" height="12">
+              <use href="./images/icons.svg#icon-btn-arrow"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="about-text">
-    <p class="about-text_item">
-      Ice is a place where you will become not only a little happier, but also
-      healthier. Health is the main value for us, and we follow it when creating
-      our handmade desserts.
-    </p>
-
-    <p class="about-text_item">
-      We use traditional recipes and 100% natural ingredients. Our products are
-      so natural that they can be given to children from the age of three years.
-      Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23
-      milkshakes.
-    </p>
-  </div>
-  <button type="button" class="btn">Read more</button>
 </section>
