--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -81,3 +81,19 @@
   letter-spacing: 0.04em;
   color: #fcfcfc;
 }
+
+.text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 186%;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #fcfcfc;
+}
+
+.name {
+  font-weight: 500;
+  line-height: 186%;
+  text-align: center;
+  color: #131313;
+}
