--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -1,11 +1,14 @@
 .advantages {
   background-color: #84a178;
   padding-bottom: 60px;
+  padding-top: 42px;
   @include tablet {
     padding-bottom: 204px;
+    padding-top: 48px;
   }
   @include desktop {
     padding-bottom: 180px;
+    padding-top: 60px;
   }
 }
 .container-adv {
@@ -27,8 +30,20 @@
 .advantages-list {
   list-style: none;
 
-  @include desktop {
+  @include tablet {
     display: flex;
+    justify-content: space-around;
+  }
+
+  @include desktop {
+  }
+}
+.advantages-list_item {
+  @include tablet {
+    max-width: 152px;
+  }
+  @include desktop {
+    max-width: 368px;
   }
 }
 .insite {
@@ -80,7 +95,10 @@
   text-align: center;
   letter-spacing: 0.02em;
   color: #fcfcfc;
-  margin-bottom: 28px;
+  margin-bottom: 22px;
+  :nth-child(3) {
+    margin-bottom: 0;
+  }
 
   @include tablet {
     margin-bottom: 0;
