--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -1,6 +1,3 @@
-.swiper-pagination {
-  bottom: auto;
-}
 .customer-reviews {
   padding: 20px;
   min-height: 100%;
@@ -42,7 +39,9 @@
 }
 .image-slider {
   padding: 30px 0 70px 0;
+  position: relative;
 }
+
 .image-slider__image {
   text-align: center;
 }
