--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -32,7 +32,7 @@
     
 }
 
-.container-products_text {
+.container-products__text {
     margin-bottom: 12px;
     font-weight: 800;
     font-size: 18px;
@@ -48,7 +48,7 @@
     color: #131313;
 }
 
-.container-products_header {
+.container-products__header {
     margin-bottom: 148px;
     @include tablet {
         margin-bottom: 200px;
@@ -92,7 +92,7 @@
 }
 
 
-.products-list_item {
+.products-list__item {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -131,19 +131,19 @@
     border-radius: 24px;
 }
 
-.products-list_item--green {
+.products-list__item--green {
     background: #AEC6A5;
 }
 
-.products-list_item--yellow {
+.products-list__item--yellow {
     background: #EFD478;
 }
 
-.products-list_item--brown {
+.products-list__item--brown {
     background: #D6936D;
 }
 
-.products-list_item::before {
+.products-list__item::before {
     position: absolute;
     top: 50%;
     bottom: 50%;
@@ -170,7 +170,7 @@
 
 // circle----------------------------
 
-.products-list_top--circle::before {
+.products-list__top--circle::before {
     position: absolute;
     top: 50%;
     bottom: 50%;
@@ -190,7 +190,7 @@
     border: none;   
 }
 
-.products-list_top--green::before {
+.products-list__top--green::before {
     background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)),
             #D9D9D9;
         box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
@@ -203,7 +203,7 @@
                 }
 }
 
-.products-list_top--yellow::before {
+.products-list__top--yellow::before {
     background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
         box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
     transform: translate(-17%, -165%);
@@ -215,7 +215,7 @@
         }
 }
 
-.products-list_top--brown::before {
+.products-list__top--brown::before {
     background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
         box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
     transform: translate(-14%, -165%);
@@ -230,7 +230,7 @@
 
 
 
-.products-list_item--ice-cream::before {
+.products-list__item--ice-cream::before {
     content: '';
     display: block;
     transform: translateY(-160%);
@@ -262,7 +262,7 @@
     
 }
 
-.products-list_item--coffee::before {
+.products-list__item--coffee::before {
     content: '';
     display: block;
     transform: translateY(-170%);
@@ -292,7 +292,7 @@
     
 }
 
-.products-list_item--shakes::before {
+.products-list__item--shakes::before {
     content: '';
     display: block;
     transform: translateY(-170%);
@@ -324,7 +324,7 @@
 }
 
 
-.product-list_title {
+.product-list__title {
     display: inline-block;
     margin-bottom: 40px;
     @include desktop {
@@ -345,7 +345,7 @@
     color: #131313;
 }
 
-.product-list_text {
+.product-list__text {
     font-size: 14px;
     @include desktop {
         font-size: 16px;
@@ -369,7 +369,295 @@
     margin-right: auto;
 }
 
-.products-list_button {
+.products-list__button {
     border: none;
     background-color: transparent;
+}
+
+// modal--------------------------------------
+
+.backdrop-products {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(248, 210, 78, 0.1);
+    opacity: 1;
+    visibility: visible;
+    &.is-hidden {
+            opacity: 0;
+            pointer-events: none;
+            visibility: hidden;
+        }
+
+    z-index: 1;
+    overflow-y: scroll;
+}
+
+.modal-products {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    @include tablet {
+            width: 568px;
+        }
+    border-radius: 10px;
+    border: 2px solid #F8D24E;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -35%);
+    padding: 28px 20px;
+    @include tablet {
+        padding: 32px 40px;
+    }
+    text-align: center;
+    z-index: 1;
+    color: #131313;
+    background: #FCFCFC;
+    
+}
+
+.modal-products__button {
+    border: none;
+    background-color: transparent;
+    position: absolute;    
+    top: 12px;
+    right: 12px;
+    padding: 0;
+}
+
+.modal-products__header {
+    max-width: 142px;
+    @include tablet {
+        max-width: 100%;
+    }
+    margin-bottom: 181px;
+    @include tablet {
+        margin-bottom: 186px;
+    }
+    font-family: 'Seymour One', sans-serif;
+    font-size: 20px;
+    line-height: 1.4;
+}
+
+.modal-products__top {
+    display: flex;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 2.8;
+    background: #9CBE8F;
+        border: 2px solid #9CBE8F;
+        box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
+    border-radius: 50%;
+    width: 43px;
+    height: 43px;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-products__item {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #9CBE8F;
+    border-radius: 40px;
+    width: 53px;
+    height: 72px;
+    justify-content: start;
+    align-items: center;
+}
+
+.modal-products__bottom{
+    font-size: 10px;
+    line-height: 1.2;
+}
+
+.products-box {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    @include tablet {
+        justify-content: center;
+        margin-bottom: 48px;
+        gap: 20px;
+    }
+}
+
+.modal-products__subheader {
+    margin-bottom: 24px;
+    font-size: 20px;
+    line-height: 1.4;
+    font-weight: 500;
+}
+
+.products-ingredients {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 1.76;
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+.products-ingredients__item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.products-modal-form {
+    width: 100%;
+    @include tablet {
+        max-width: 368px;
+    }
+}
+
+.products-name-field {
+    margin-bottom: 16px;
+        position: relative;
+        & label {
+            position: absolute;
+            top: 50%;
+            left: 11px;
+            transform: translateY(-50%);
+            display: inline-block;
+            font-size: 14px;
+            line-height: 1.4;
+        }
+}
+
+.products-name-field input {
+        width: 100%;
+        min-height: 42px;    
+        border: 1px solid #84A178;
+        border-radius: 10px;
+        padding-left: 60px;
+        font-size: 14px;
+        background: rgba(248, 210, 78, 0.1);
+}
+
+.products-phone-field input {
+    width: 100%;
+    min-height: 42px;
+    border: 1px solid #84A178;
+    border-radius: 10px;
+    padding-left: 60px;
+    font-size: 14px;
+    background: rgba(248, 210, 78, 0.1);
+}
+
+
+.products-text-field textarea {
+    width: 100%;
+    min-height: 84px;
+    border: 1px solid #84A178;
+    font-size: 14px;
+    resize: none;
+    border-radius: 10px;
+    padding: 11px;
+    background: rgba(248, 210, 78, 0.1);
+    line-height: 1.4;
+    color: inherit;
+}
+
+.products-text-field textarea::placeholder {
+    color: inherit;
+}
+
+.products-phone-field {
+    margin-bottom: 16px;
+        position: relative;
+        & label {
+            position: absolute;
+            top: 50%;
+            left: 11px;
+            transform: translateY(-50%);
+            display: inline-block;
+            font-size: 14px;
+            line-height: 1.4;
+        }
+}
+
+.products-text-field {
+    margin-bottom: 25px;
+    position: relative;
+        & label {
+            position: absolute;
+                width: 1px;
+                height: 1px;
+                margin: -1px;
+                border: 0;
+                padding: 0;
+                white-space: nowrap;
+                clip-path: inset(100%);
+                clip: rect(0 0 0 0);
+                overflow: hidden;
+        }
+}
+
+.products-modal-form__button {
+    padding: 12px 34px; 
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.21;
+    border:  none;
+    background: #F8D24E;
+}
+
+
+.modal-products__header::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    display: inline-block;
+    width: 130px;
+    height: 130px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    border: none;
+    z-index: 1;
+    display: block;
+    transform: translate(5%,-260%);
+    @include tablet {
+            transform: translate(60%, -285%);
+        }
+
+        background-image: url(../images/modal-products-mob-1x-min.jpg);
+    
+        @include retina {
+            background-image: url(../images/modal-products-mob-2x-min.jpg);
+        }
+
+        @include desktop {
+            background-image: url(../images/modal-products-desk-1x-min.jpg);
+    
+            @include retina {
+                background-image: url(../images/modal-products-desk-2x-min.jpg);
+            }
+        }
+}
+
+.modal-products__header::after {
+    content: '';
+    position: absolute;
+        top: 50%;
+        bottom: 50%;
+        transform: translate(-101%, -253%);
+        @include tablet {
+            transform: translate(-157%, -277%);
+        }
+        display: inline-block;
+        width: 132px;
+        height: 131px;
+        border-radius: 50%;
+        border: none;
+        background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+            box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
 }
