--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,9 +4,16 @@
       <li class="contact__card">
         <h2 class="contact__title">CAFE</h2>
         <p class="contact__subtitle">Chicago</p>
-        <p class="contact__adress">
-          10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA
-        </p>
+        <address>
+          <a
+            href="https://www.google.com/maps/place/10340+Ridgeland+Ave,+Chicago+Ridge,+IL+60415,+США/@41.7034016,-87.7819292,17z/data=!3m1!4b1!4m5!3m4!1s0x880e39ad302b2c19:0xc808e9b14d04eb2b!8m2!3d41.7034016!4d-87.7797405"
+            class="contact__address"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA
+          </a>
+        </address>
         <hr />
         <p class="contact__subtitle-date">Monday - Friday</p>
         <p class="contact-subtitle-time">06:00 AM - 10:00 PM</p>
@@ -23,9 +30,16 @@
       <li class="contact__card">
         <h2 class="contact__title-middle">FOODTRUCK</h2>
         <p class="contact__subtitle">Los Angeles</p>
-        <p class="contact__adress">
-          1003 Manhattan Ave, Manhattan Beach, CA 90263, USA
-        </p>
+        <address>
+          <a
+            class="contact__address"
+            href="https://www.google.com/maps/place/1003+Manhattan+Ave,+Manhattan+Beach,+CA+90266,+США/@33.8835263,-118.4125173,17z/data=!4m13!1m7!3m6!1s0x80c2b3eca6743829:0x98448969b9b4373d!2s1003+Manhattan+Ave,+Manhattan+Beach,+CA+90266,+США!3b1!8m2!3d33.8835263!4d-118.4103286!3m4!1s0x80c2b3eca6743829:0x98448969b9b4373d!8m2!3d33.8835263!4d-118.4103286"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            1003 Manhattan Ave, Manhattan Beach, CA 90263, USA
+          </a>
+        </address>
         <hr />
         <p class="contact__subtitle-date">Monday - Friday</p>
         <p class="contact-subtitle-time">06:00 AM - 10:00 PM</p>
@@ -42,7 +56,16 @@
       <li class="contact__card">
         <h2 class="contact__title">CAFE</h2>
         <p class="contact__subtitle">New York</p>
-        <p class="contact__adress">726 Sterling Pl, Brooklyn, NY 11222, USA</p>
+        <address>
+          <a
+            href="https://www.google.com/maps/place/726+Sterling+Pl,+Brooklyn,+NY+11216,+США/@40.6726938,-73.956928,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9e1735b38f:0xb5fe454b88e9c2c0!8m2!3d40.6726938!4d-73.954734"
+            class="contact__address"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            726 Sterling Pl, Brooklyn, NY 11222, USA
+          </a>
+        </address>
         <hr />
         <p class="contact__subtitle-date">Monday - Friday</p>
         <p class="contact-subtitle-time">06:00 AM - 10:00 PM</p>
@@ -58,8 +81,18 @@
       </li>
     </ul>
     <div class="contact__buttons">
-      <button class="btn contact__btn-location">Our Locations</button>
-      <button class="btn contact__btn-franchise">Franchise</button>
+      <button class="btn contact__btn-location">
+        Our Locations
+        <svg class="about__btn-icon" width="12" height="12">
+          <use href="./images/icons.svg#icon-btn-arrow"></use>
+        </svg>
+      </button>
+      <button class="btn contact__btn-franchise">
+        Franchise
+        <svg class="about__btn-icon" width="12" height="12">
+          <use href="./images/icons.svg#icon-btn-arrow"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </section>
