contact-popup (not-finished)

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -95,4 +95,53 @@
       </button>
     </div>
   </div>
+  <!-- <div class="popup-location is-hidden">
+    <div class="popup-location__body">
+      <button class="popup-location__btn-close">
+        <svg class="about__btn-icon" width="12" height="12">
+          <use href="./images/icons.svg#icon-mob-menu-close"></use>
+        </svg>
+      </button>
+      <h3 class="popup-contact__title">Our Locations</h3>
+      <iframe
+        class="popup-location__map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.0578732747017!2d-73.95692804909342!3d40.67269377923488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b9e1735b38f%3A0xb5fe454b88e9c2c0!2zNzI2IFN0ZXJsaW5nIFBsLCBCcm9va2x5biwgTlkgMTEyMTYsINCh0KjQkA!5e0!3m2!1sru!2sua!4v1669435104375!5m2!1sru!2sua"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+      <button class="btn popup-location__btn">
+        <a class="popup-location__link" href="https://goo.gl/maps/Yn29nd9ep5xPora9A" target="_blank"
+          >Open map</a
+        >
+      </button>
+    </div>
+  </div> -->
+  <div class="popup-francise">
+    <div class="popup-francise__body">
+      <h3 class="popup-contact__title">
+        Thank you for your interest in owning an Ice Cream shop
+      </h3>
+      <p class="popup-francise__text">
+        Due to the overwhelming volume of franchise requests we are not
+        accepting new franchisee applications at this time. Once the application
+        process resumes, we will contact you for further information. Please
+        fill out the contact information below and we will reach out for
+        additional information. We appreciate your patience.
+      </p>
+      <form class="popup-francise__form is-hidden">
+        <input class="popup-francise__input" type="text" placeholder="Name" />
+        <input class="popup-francise__input" type="text" placeholder="Phone" />
+        <input class="popup-francise__input" type="text" placeholder="Email" />
+        <textarea
+          class="popup-francise__input-comment"
+          placeholder="Comment"
+        ></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
 </section>
