--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
       <div class="footer__soc">
         <ul class="footer__soc soc-list">
           <li class="soc-item">
-            <a class="soc-link" target="_blank">
+            <a class="soc-link" href="=https://uk-ua.facebook.com/" target="_blank">
               <svg class="icon" width="10" height="20">
                 <use href="images/icons.svg#icon-facebook-icon"></use>
               </svg>
@@ -16,14 +16,14 @@
           </li>
           <li class="soc-item">
             <a class="soc-link" target="_blank">
-              <svg class="icon" width="20" height="16">
+              <svg class="icon" href="https://telegram.org/?setln=uk" width="20" height="16">
                 <use href="images/icons.svg#icon-telegram-icon"></use>
               </svg>
             </a>
           </li>
           <li class="soc-item">
             <a class="soc-link" target="_blank">
-              <svg class="icon" width="20" height="20">
+              <svg class="icon" href="https://git-scm.com/" width="20" height="20">
                 <use href="images/icons.svg#icon-github-icon"></use>
               </svg>
             </a>
