--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
       <div class="footer__soc">
         <ul class="footer__soc soc-list">
           <li class="soc-item">
-            <a class="soc-link" href="=https://uk-ua.facebook.com/" target="_blank">
+            <a class="soc-link" href="https://uk-ua.facebook.com/" target="_blank">
               <svg class="icon" width="10" height="20">
                 <use href="images/icons.svg#icon-facebook-icon"></use>
               </svg>
