--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -1,5 +1,5 @@
 .customer-reviews {
-  padding: 20px;
+  padding: 178px 0 393px 0;
   min-height: 100%;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -10,7 +10,7 @@
     background-image: url(../images/bg-mobile-2px-min.jpg);
   }
   @include tablet {
-    padding: 32px;
+    padding: 283px 0 379px 0;
     min-height: 100%;
     overflow: hidden;
     background-repeat: no-repeat;
@@ -23,7 +23,7 @@
     }
   }
   @include desktop {
-    padding: 30px;
+    padding: 464px 0 228px 0;
     min-height: 100%;
     overflow: hidden;
     background-repeat: no-repeat;
