--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -18,6 +18,7 @@
   height: 34px;
   border-radius: 50%;
   background-color: #f8d24e;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
