--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -57,6 +57,7 @@
   padding: 35px 39px;
   background: #84a178;
   border-radius: 10px;
+  margin-bottom: 30px;
 
   @include tablet {
     max-width: 705px;
@@ -64,6 +65,7 @@
     padding: 20px 80px;
     background: #84a178;
     border-radius: 24px;
+    margin-bottom: 32px;
   }
 
   @include desktop {
@@ -72,6 +74,7 @@
     padding: 43px 109px;
     background: #84a178;
     border-radius: 24px;
+    margin-bottom: 32px;
   }
 }
 
@@ -98,4 +101,10 @@
   line-height: 186%;
   text-align: center;
   color: #131313;
+}
+
+.image-slider .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #84a178;
 }
