--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,7 +25,7 @@
                     <use class="header__burger-icon" href=" ./images/icons.svg#icon-mob-menu-open"></use>
                 </svg>
             </button>
-            <button class="header__btn btn" type="button">
+            <button class="header__btn btn" type="button" data-modal-open-buy-now>
                 Buy now
                 <svg class="header__btn-icon" width="12" height="12">
                     <use href="./images/icons.svg#icon-btn-arrow"></use>
@@ -62,7 +62,7 @@
             </ul>
         </nav>
         <div class="header__mobile-btn-container">
-            <button class="header__mobile-btn btn" type="button">
+            <button class="header__mobile-btn btn" type="button" data-modal-open-buy-now>
                 Buy now
                 <svg class="header__btn-icon" width="12" height="12">
                     <use href="./images/icons.svg#icon-btn-arrow"></use>
