add modal header desk

--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -10,18 +10,18 @@
         <div class="modal-buy-now__content">
             <p class="modal-buy-now__title">Buy now</p>
             <ul class="modal-buy-now__list">
-                <li class="modal-buy-now__items">
-                    <div class="modal-buy-now__description">
+                <li class="modal-buy-now__items modal-buy-now__items--ice-cream">
+                    <div class="modal-buy-now__description modal-buy-now__description--ice-cream">
                         <p class="modal-buy-now__text">ice cream</p>
                     </div>
                 </li>
-                <li class="modal-buy-now__items">
-                    <div class="modal-buy-now__description">
+                <li class="modal-buy-now__items modal-buy-now__items--coffee">
+                    <div class="modal-buy-now__description modal-buy-now__description--coffee">
                         <p class="modal-buy-now__text">ice coffee</p>
                     </div>
                 </li>
-                <li class="modal-buy-now__items">
-                    <div class="modal-buy-now__description">
+                <li class="modal-buy-now__items modal-buy-now__items--milkshake">
+                    <div class="modal-buy-now__description modal-buy-now__description--milkshake">
                         <p class="modal-buy-now__text">milkshake</p>
                     </div>
                 </li>
@@ -39,7 +39,7 @@
             </div>
             <div class="modal-buy-now__field">
                 <!-- <label class="modal-buy-now__label" for="comment">Comment</label> -->
-                <textarea class="modal__comment" name="comment" id="comment" placeholder="Comment"></textarea>
+                <textarea class="modal-buy-now__comment" name="comment" id="comment" placeholder="Comment"></textarea>
             </div>
             <button type="submit" class="modal-buy-now__send-btn btn">Submit</button>
     </div>
