--- a/src/sass/layouts/_modal-buy-now.scss
+++ b/src/sass/layouts/_modal-buy-now.scss
@@ -24,52 +24,36 @@
   left: 50%;
   z-index: 50;
   transform: translate(-50%, -50%) scale(1);
-  width: 90%;
-  height: 609px;
+  width: 280px;
   background-color: #fcfcfc;
   border-radius: 10px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
-  padding: 42px 40px 40px 40px;
+  padding: 28px;
 
   .backdrop-buy-now.is-hidden & {
     transform: translate(-50%, -50%) scale(0);
   }
 
-  @include mobile {
-    width: 450px;
-  }
-
-  @include desktop {
-    width: 528px;
+  @include tablet {
+    width: 568px;
   }
 }
 
 .modal-buy-now__close-btn-container {
   position: absolute;
-  right: 8px;
-  top: 8px;
+  right: 12px;
+  top: 12px;
 }
 
 .modal-buy-now__close-btn {
   cursor: pointer;
-  background-color: var(--main-background-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 6px;
-  border-radius: 50%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: #000000;
-  cursor: pointer;
-  outline: transparent;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #131313;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: var(--object-active-color);
-  }
 }
 
 .modal-buy-now__close-btn-img {
@@ -80,17 +64,225 @@
   margin: 0 auto;
 }
 
+.modal-buy-now__content {
+  position: relative;
+}
+
 .modal-buy-now__title {
+  font-family: 'Seymour One';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: calc(28 / 20);
+  text-align: center;
+  color: #131313;
+}
+
+.modal-buy-now__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 32px;
+
+  @include tablet {
+    flex-direction: row;
+  }
+}
+
+.modal-buy-now__text {
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: calc(20 / 16);
   text-align: center;
-  margin-top: 2px;
-  margin-bottom: 12px;
+  text-transform: uppercase;
+  color: #131313;
+}
 
-  @include mobile {
-    font-size: 20px;
+.modal-buy-now__items--ice-cream::before,
+.modal-buy-now__items--coffee::before,
+.modal-buy-now__items--milkshake::before {
+  top: 50%;
+  bottom: 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-buy-now__items--ice-cream::before {
+  content: '';
+  position: absolute;
+  display: block;
+  z-index: 2;
+  width: 132px;
+  height: 131px;
+  border-radius: 50%;
+  background-image: url(../images/ice-cream-products-mob-1x-min.jpg);
+  @include retina {
+    background-image: url(../images/ice-cream-products-mob-2x-min.jpg);
   }
+
+  @include tablet {
+    transform: translateY(-50%);
+    background-image: url(../images/ice-cream-products-tab-1x-min.jpg);
+
+    @include retina {
+      background-image: url(../images/ice-cream-products-tab-2x-min.jpg);
+    }
+  }
+
+  @include desktop {
+    transform: translateY(-50%);
+    background-image: url(../images/ice-cream-products-desk-1x-min.jpg);
+    @include retina {
+      background-image: url(../images/ice-cream-products-desk-2x-min.jpg);
+    }
+  }
+}
+
+.modal-buy-now__items--coffee::before {
+  content: '';
+  position: absolute;
+  display: block;
+  z-index: 2;
+  width: 132px;
+  height: 131px;
+  border-radius: 50%;
+  @include desktop {
+    transform: translateY(-50%);
+  }
+  background-image: url(../images/ice-cream2-products-mob-1x-min.jpg);
+
+  @include retina {
+    background-image: url(../images/ice-cream2-products-mob-2x-min.jpg);
+  }
+
+  @include tablet {
+    transform: translateY(-50%);
+    background-image: url(../images/ice-cream2-products-tab-1x-min.jpg);
+
+    @include retina {
+      background-image: url(../images/ice-cream2-products-tab-2x-min.jpg);
+    }
+  }
+
+  @include desktop {
+    background-image: url(../images/ice-cream2-products-desk-1x-min.jpg);
+    @include retina {
+      background-image: url(../images/ice-cream2-products-desk-2x-min.jpg);
+    }
+  }
+}
+
+.modal-buy-now__items--milkshake::before {
+  content: '';
+  position: absolute;
+  display: block;
+  z-index: 2;
+  width: 132px;
+  height: 131px;
+  border-radius: 50%;
+
+  @include desktop {
+    transform: translateY(-50%);
+  }
+  background-image: url(../images/ice-cream3-products-mob-1x-min.jpg);
+
+  @include retina {
+    background-image: url(../images/ice-cream3-products-mob-2x-min.jpg);
+  }
+
+  @include tablet {
+    transform: translateY(-50%);
+    background-image: url(../images/ice-cream3-products-tab-1x-min.jpg);
+
+    @include retina {
+      background-image: url(../images/ice-cream3-products-tab-2x-min.jpg);
+    }
+  }
+
+  @include desktop {
+    background-image: url(../images/ice-cream3-products-desk-1x-min.jpg);
+    @include retina {
+      background-image: url(../images/ice-cream3-products-desk-2x-min.jpg);
+    }
+  }
+}
+
+.modal-buy-now__description {
+  margin-top: 103px;
+  width: 132px;
+  height: 135px;
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+  border-radius: 15.7808px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding-bottom: 20px;
+  background-color: #fcfcfc;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    transform: translateY(-93%);
+    display: block;
+    width: 132px;
+    height: 131px;
+    border-radius: 50%;
+    @include desktop {
+      transform: translateY(-93%);
+    }
+  }
+}
+
+.modal-buy-now__description--ice-cream {
+  border: 2px solid #96af8c;
+
+  &::before {
+    background: linear-gradient(
+        0deg,
+        rgba(156, 190, 143, 0.7),
+        rgba(156, 190, 143, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+  }
+}
+
+.modal-buy-now__description--coffee {
+  border: 2px solid #efd478;
+
+  &::before {
+    background: linear-gradient(
+        0deg,
+        rgba(248, 210, 78, 0.7),
+        rgba(248, 210, 78, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+  }
+}
+
+.modal-buy-now__description--milkshake {
+  border: 2px solid #d6936d;
+
+  &::before {
+    background: linear-gradient(
+        0deg,
+        rgba(213, 117, 63, 0.7),
+        rgba(213, 117, 63, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.modal-buy-now__form {
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-top: 40px;
 }
 
 .modal-buy-now__field {
@@ -99,27 +291,21 @@
   position: relative;
 }
 
-.modal-buy-now__label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--text-description-color);
-  margin-bottom: 4px;
-}
-
 .modal-buy-now__input {
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  background-color: transparent;
-  margin-bottom: 10px;
-  padding-left: 42px;
+  height: 42px;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  margin-bottom: 16px;
+  padding-left: 16px;
   outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:focus {
-    border: 1px solid var(--object-active-color);
+  &::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: calc(20 / 14);
+    color: #131313;
   }
 }
 
@@ -135,33 +321,27 @@
 }
 
 .modal-buy-now__comment {
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  background-color: transparent;
-  margin-bottom: 10px;
-  resize: none;
-  padding: 12px 16px;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  padding-left: 16px;
+  padding-top: 11px;
   outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:focus {
-    border: 1px solid var(--object-active-color);
-  }
+  height: 84px;
 
   &::placeholder {
     font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+    font-size: 14px;
+    line-height: calc(20 / 14);
+    color: #131313;
   }
 }
 
 .modal-buy-now__send-btn {
-  min-width: 200px;
-  height: 50px;
+  min-width: 121px;
+  height: 42px;
   margin: 0 auto;
   display: block;
-  margin-top: 30px;
+  margin-top: 32px;
 }
