--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -62,7 +62,7 @@
             </ul>
         </nav>
         <div class="header__mobile-btn-container">
-            <button class="header__mobile-btn btn" type="button" data-modal-open-buy-now>
+            <button class="header__mobile-btn btn" type="button" data-menu-close-btn data-modal-open-buy-now-mob>
                 Buy now
                 <svg class="header__btn-icon" width="12" height="12">
                     <use href="./images/icons.svg#icon-btn-arrow"></use>
