--- a/src/sass/layouts/_modal-buy-now.scss
+++ b/src/sass/layouts/_modal-buy-now.scss
@@ -1,5 +1,6 @@
 .backdrop-buy-now {
   position: fixed;
+  overflow-y: scroll;
   top: 0;
   left: 0;
   width: 100vw;
@@ -26,10 +27,11 @@
   transform: translate(-50%, -50%) scale(1);
   width: 280px;
   background-color: #fcfcfc;
-  border-radius: 10px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
   padding: 28px;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
 
   .backdrop-buy-now.is-hidden & {
     transform: translate(-50%, -50%) scale(0);
@@ -37,6 +39,26 @@
 
   @include tablet {
     width: 568px;
+  }
+
+  @media screen and (max-height: 1000px) and (max-width: 768px) {
+    top: 55%;
+  }
+
+  @media screen and (max-height: 900px) and (max-width: 768px) {
+    top: 65%;
+  }
+
+  @media screen and (max-height: 765px) and (max-width: 768px) {
+    top: 75%;
+  }
+
+  @media screen and (max-height: 665px) and (max-width: 768px) {
+    top: 85%;
+  }
+
+  @media screen and (max-height: 580px) and (max-width: 768px) {
+    top: 95%;
   }
 }
 
@@ -47,7 +69,7 @@
 }
 
 .modal-buy-now__close-btn {
-  cursor: pointer;
+  cursor: url('../images/cursor-ice.png'), auto;
   background-color: transparent;
   border: none;
   outline: none;
@@ -58,6 +80,11 @@
 
 .modal-buy-now__close-btn-img {
   fill: currentColor;
+
+  @include tablet {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .modal-buy-now__form {
@@ -71,10 +98,14 @@
 .modal-buy-now__title {
   font-family: 'Seymour One';
   font-weight: 400;
-  font-size: 20px;
+  font-size: 16px;
   line-height: calc(28 / 20);
   text-align: center;
   color: #131313;
+
+  @include tablet {
+    font-size: 20px;
+  }
 }
 
 .modal-buy-now__list {
@@ -83,10 +114,10 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 32px;
 
   @include tablet {
     flex-direction: row;
+    gap: 32px;
   }
 }
 
@@ -115,15 +146,16 @@
   display: block;
   z-index: 2;
   width: 132px;
-  height: 131px;
+  height: 132px;
   border-radius: 50%;
+  transform: translateY(-224%);
   background-image: url(../images/ice-cream-products-mob-1x-min.jpg);
   @include retina {
     background-image: url(../images/ice-cream-products-mob-2x-min.jpg);
   }
 
   @include tablet {
-    transform: translateY(-50%);
+    transform: translateY(-57%);
     background-image: url(../images/ice-cream-products-tab-1x-min.jpg);
 
     @include retina {
@@ -132,7 +164,6 @@
   }
 
   @include desktop {
-    transform: translateY(-50%);
     background-image: url(../images/ice-cream-products-desk-1x-min.jpg);
     @include retina {
       background-image: url(../images/ice-cream-products-desk-2x-min.jpg);
@@ -146,11 +177,9 @@
   display: block;
   z-index: 2;
   width: 132px;
-  height: 131px;
+  height: 132px;
   border-radius: 50%;
-  @include desktop {
-    transform: translateY(-50%);
-  }
+  transform: translateY(-58%);
   background-image: url(../images/ice-cream2-products-mob-1x-min.jpg);
 
   @include retina {
@@ -158,9 +187,8 @@
   }
 
   @include tablet {
-    transform: translateY(-50%);
+    transform: translateY(-57%);
     background-image: url(../images/ice-cream2-products-tab-1x-min.jpg);
-
     @include retina {
       background-image: url(../images/ice-cream2-products-tab-2x-min.jpg);
     }
@@ -180,12 +208,10 @@
   display: block;
   z-index: 2;
   width: 132px;
-  height: 131px;
+  height: 132px;
   border-radius: 50%;
+  transform: translateY(108%);
 
-  @include desktop {
-    transform: translateY(-50%);
-  }
   background-image: url(../images/ice-cream3-products-mob-1x-min.jpg);
 
   @include retina {
@@ -193,7 +219,7 @@
   }
 
   @include tablet {
-    transform: translateY(-50%);
+    transform: translateY(-57%);
     background-image: url(../images/ice-cream3-products-tab-1x-min.jpg);
 
     @include retina {
@@ -210,9 +236,9 @@
 }
 
 .modal-buy-now__description {
-  margin-top: 103px;
+  margin-top: 83px;
   width: 132px;
-  height: 135px;
+  height: 136px;
   filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
   border-radius: 15.7808px;
   display: flex;
@@ -229,7 +255,7 @@
     transform: translateY(-93%);
     display: block;
     width: 132px;
-    height: 131px;
+    height: 132px;
     border-radius: 50%;
     @include desktop {
       transform: translateY(-93%);
@@ -249,6 +275,11 @@
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
   }
+
+  &:hover,
+  &:focus {
+    background-color: #96af8c;
+  }
 }
 
 .modal-buy-now__description--coffee {
@@ -262,6 +293,11 @@
       ),
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: #efd478;
   }
 }
 
@@ -277,12 +313,21 @@
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
   }
+
+  &:hover,
+  &:focus {
+    background-color: #d6936d;
+  }
 }
 
 .modal-buy-now__form {
-  padding-left: 100px;
-  padding-right: 100px;
-  margin-top: 40px;
+  margin-top: 28px;
+
+  @include tablet {
+    margin-top: 40px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
 }
 
 .modal-buy-now__field {
@@ -292,31 +337,30 @@
 }
 
 .modal-buy-now__input {
-  height: 42px;
+  height: 32px;
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84a178;
   border-radius: 10px;
-  margin-bottom: 16px;
-  padding-left: 16px;
+  margin-bottom: 12px;
+  padding-left: 12px;
   outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &::placeholder {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: calc(20 / 14);
     color: #131313;
+
+    @include tablet {
+      font-size: 14px;
+    }
   }
-}
 
-.modal-buy-now__icon {
-  position: absolute;
-  bottom: 21px;
-  left: 12px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  .modal-buy-now__input:focus + & {
-    fill: var(--object-active-color);
+  @include tablet {
+    height: 42px;
+    padding-left: 16px;
+    margin-bottom: 16px;
   }
 }
 
@@ -324,24 +368,38 @@
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84a178;
   border-radius: 10px;
-  padding-left: 16px;
+  padding-left: 12px;
   padding-top: 11px;
   outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  height: 84px;
+  height: 65px;
 
   &::placeholder {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: calc(20 / 14);
     color: #131313;
+
+    @include tablet {
+      font-size: 14px;
+    }
+  }
+
+  @include tablet {
+    height: 84px;
+    padding-left: 16px;
   }
 }
 
 .modal-buy-now__send-btn {
-  min-width: 121px;
+  min-width: 114px;
   height: 42px;
   margin: 0 auto;
   display: block;
-  margin-top: 32px;
+  margin-top: 24px;
+
+  @include tablet {
+    min-width: 121px;
+    margin-top: 32px;
+  }
 }
