--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -29,17 +29,16 @@
         </div>
         <form class="modal-buy-now__form" autocomplete="off">
             <div class="modal-buy-now__field">
-                <!-- <label class="modal-buy-now__label" for="name">Name</label> -->
-                <input class="modal-buy-now__input" type="text" name="name" id="name" placeholder="Name">
+                <label class="modal-buy-now__label"><input class="modal-buy-now__input" type="text" name="name"
+                        placeholder="Name"></label>
             </div>
             <div class="modal-buy-now__field">
-                <!-- <label class="modal-buy-now__label" for="tel">Phone</label> -->
-                <input class="modal-buy-now__input" type="tel" name="tel" id="tel" autocomplete="off"
-                    placeholder="Phone">
+                <label class="modal-buy-now__label"><input class="modal-buy-now__input" type="tel" name="tel"
+                        autocomplete="off" placeholder="Phone"></label>
             </div>
             <div class="modal-buy-now__field">
-                <!-- <label class="modal-buy-now__label" for="comment">Comment</label> -->
-                <textarea class="modal-buy-now__comment" name="comment" id="comment" placeholder="Comment"></textarea>
+                <label class="modal-buy-now__label"><textarea class="modal-buy-now__comment" name="comment"
+                        placeholder="Comment"></textarea></label>
             </div>
             <button type="submit" class="modal-buy-now__send-btn btn">Submit</button>
     </div>
