--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -121,14 +121,24 @@
   top: 22px;
   background-repeat: no-repeat;
   background-image: url('../images/cow-mobile1x.png');
+  @include retina {
+    background-image: url('../images/cow-mobile2x.png');
+  }
+
   background-size: cover;
   @include tablet {
     background-image: url('../images/cow-tablet1x.png');
+    @include retina {
+      background-image: url('../images/cow-tablet2x.png');
+    }
     top: 26px;
   }
 
   @include desktop {
     background-image: url('../images/cow-desktop1x.png');
+    @include retina {
+      background-image: url('../images/cow-desktop2x.png');
+    }
     top: 39px;
   }
 }
@@ -205,5 +215,106 @@
 .about-text-btn {
   @include tablet {
     width: calc((100% - 34px) / 2);
+  }
+}
+
+.backdrop-about {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(248, 210, 78, 0.1);
+  opacity: 1;
+  visibility: visible;
+
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+  z-index: 15;
+  overflow-y: scroll;
+}
+.modal-about {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 85%;
+
+  @include tablet {
+    width: 568px;
+  }
+  border-radius: 10px;
+  border: 2px solid #f8d24e;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -35%);
+  padding: 28px 28px;
+  @include tablet {
+    padding: 32px 60px;
+  }
+
+  text-align: center;
+  z-index: 1;
+  color: #131313;
+  background: #fcfcfc;
+}
+.modal-about__button {
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 0;
+  cursor: url('../images/cursor-ice.png'), auto;
+  @include tablet {
+    top: 20px;
+    right: 20px;
+  }
+}
+.modal-about__header {
+  font-family: Seymour One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #131313;
+  margin-bottom: 20px;
+  @include tablet {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+}
+.modal-about__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #131313;
+  text-align: left;
+  margin-top: 20px;
+  @include tablet {
+    font-size: 16px;
+    line-height: 1.4;
+    margin-top: 32px;
+  }
+}
+.video {
+}
+.video__item {
+  width: 224px;
+  height: 199px;
+  border-radius: 10px;
+  background: #000000;
+  @include tablet {
+    width: 448px;
+    height: 205px;
   }
 }
