--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="container">
     <div class="footer__main">
       <p class="footer__homemade">homemade ice cream made</p>
