--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
                 <li class="header__items"><a class="header__link link" href="#header">Home</a></li>
                 <li class="header__items"><a class="header__link link" href="#about">How it’s made?</a></li>
                 <li class="header__items"><a class="header__link link" href="#products">Our products</a></li>
-                <li class="header__items"><a class="header__link link" href="#">Contact</a></li>
+                <li class="header__items"><a class="header__link link" href="#contacts">Contact</a></li>
             </ul>
         </nav>
         <div class="header__btn-container">
@@ -58,7 +58,7 @@
                 </li>
                 <li class="header__mobile-items"><a class="header__mobile-link link" href="#products">Our products</a>
                 </li>
-                <li class="header__mobile-items"><a class="header__mobile-link link" href="#">Contact</a></li>
+                <li class="header__mobile-items"><a class="header__mobile-link link" href="#contacts">Contact</a></li>
             </ul>
         </nav>
         <div class="header__mobile-btn-container">
