--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -34,7 +34,7 @@
                 <p class="hero__description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore
                     et</p>
-                <a class="hero__description-link link" href="#">
+                <a class="hero__description-link link" href="#advantages">
                     <svg class="hero__description-icon" width="40" height="16">
                         <use href="./images/icons.svg#icon-arrow-hero"></use>
                     </svg></a>
