--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -279,9 +279,17 @@
 .hero__description-link {
   color: #fcfcfc;
   cursor: url('../images/cursor-ice.png'), auto;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-right: 24px;
 }
 
 .hero__description-icon {
   fill: currentColor;
-}
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  .hero__description-link:hover &,
+  .hero__description-link:focus & {
+    transform: translateX(100%);
+  }
+}
