--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,15 +15,15 @@
             </a>
           </li>
           <li class="soc-item">
-            <a class="soc-link" target="_blank">
-              <svg class="icon" href="https://telegram.org/?setln=uk" width="20" height="16">
+            <a class="soc-link" href="https://telegram.org/?setln=uk" target="_blank">
+              <svg class="icon" width="20" height="16">
                 <use href="images/icons.svg#icon-telegram-icon"></use>
               </svg>
             </a>
           </li>
           <li class="soc-item">
-            <a class="soc-link" target="_blank">
-              <svg class="icon" href="https://git-scm.com/" width="20" height="20">
+            <a class="soc-link" href="https://git-scm.com/" target="_blank">
+              <svg class="icon" width="20" height="20">
                 <use href="images/icons.svg#icon-github-icon"></use>
               </svg>
             </a>
