--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -8,8 +8,8 @@
         style="width: 640px;">
         <div class="image-slider__image">
           <picture>
-            <source srcset="./images/customer-reviews/s1-min.png 1x, ./images/customer-reviews/s1@2x-min.png 2x"
-              media="(min-width: 1200px)" />
+            <source srcset="./images/customer-reviews/s1-min.png 1x, 
+            ./images/customer-reviews/s1@2x-min.png 2x" media="(min-width: 1200px)" />
             <img src="./images/customer-reviews/s1-min.png" alt="first-customer" loading="lazy">
           </picture>
 
@@ -28,10 +28,11 @@
         style="width: 640px;">
         <div class="image-slider__image">
           <picture>
-            <source srcset="./images/customer-reviews/s2-min.png 1x, ./images/customer-reviews/s2@2x-min.png 2x"
-              media="(min-width: 1200px)" />
+            <source srcset="./images/customer-reviews/s2-min.png 1x, 
+            ./images/customer-reviews/s2@2x-min.png 2x" media="(min-width: 1200px)" />
+            <img src="./images/customer-reviews/s2-min.png" alt="second-customer" loading="lazy">
           </picture>
-          <img src="./images/customer-reviews/s2-min.png" alt="second-customer" loading="lazy">
+
         </div>
         <div class="image-slider__text">
           <p class="text">Every day we come to you with friends after classes in college. We love your ice cream
@@ -46,10 +47,11 @@
       <div class="image-slider__slide swiper-slide" role="group" aria-label="3 / 3" style="width: 640px;">
         <div class="image-slider__image">
           <picture>
-            <source srcset="./images/customer-reviews/s3-min.png 1x, ./images/customer-reviews/s3@2x-min.png 2x"
-              media="(min-width: 1200px)" />
+            <source srcset="./images/customer-reviews/s3-min.png 1x, 
+            ./images/customer-reviews/s3@2x-min.png 2x" media="(min-width: 1200px)" />
+            <img src="./images/customer-reviews/s3-min.png" alt="third-customer" loading="lazy">
           </picture>
-          <img src="./images/customer-reviews/s3-min.png" alt="third-customer" loading="lazy">
+
         </div>
         <div class="image-slider__text">
           <p class="text"> Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like
