--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -36,6 +36,7 @@
 }
 
 .soc-link {
+  cursor: url('../images/cursor-ice.png'), auto;
   display: flex;
   align-items: center;
   justify-content: center;
