--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -22,7 +22,7 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 16px;
-  
+
   @include tablet {
     width: 704px;
     grid-template-columns: repeat(3, 1fr);
@@ -183,6 +183,10 @@
 .contact__btn {
   width: 196px;
   height: 42px;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact__btn-location {
@@ -193,6 +197,10 @@
   @extend .contact__btn;
   background: transparent;
   border: 2px solid #f8d24e;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 // Popup
@@ -216,7 +224,7 @@
   bottom: 0;
   left: 0;
   margin: auto;
-  @include desktop{
+  @include desktop {
     width: 568px;
     height: 458px;
     display: flex;
@@ -242,7 +250,7 @@
   margin-bottom: 20px;
   color: #131313;
   text-align: center;
-  @include desktop{
+  @include desktop {
     font-size: 20px;
   }
 }
@@ -252,7 +260,7 @@
   height: 199px;
   margin-bottom: 24px;
   border-radius: 10px;
-  @include desktop{
+  @include desktop {
     width: 448px;
     height: 260px;
   }
@@ -274,7 +282,7 @@
   right: 16px;
   border: none;
   background: transparent;
-  @include desktop{
+  @include desktop {
     font-size: 20px;
   }
 }
@@ -305,12 +313,10 @@
   left: 0;
   margin: auto;
   margin-top: 28px;
-  @include desktop{
+  @include desktop {
     width: 568px;
     height: 668px;
     margin-top: auto;
-   
-  
   }
 }
 
@@ -319,13 +325,12 @@
   height: 100%;
   position: relative;
   padding: 28px;
-  @include desktop{
+  @include desktop {
     padding: 32px 60px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-   
   }
 }
 
@@ -337,7 +342,7 @@
   margin-bottom: 20px;
   text-align: center;
   color: #131313;
-  @include desktop{
+  @include desktop {
     font-size: 20px;
     padding: 0 63px;
     text-align: center;
@@ -352,7 +357,7 @@
   line-height: calc(20px / 14px);
   letter-spacing: 0em;
   margin-bottom: 24px;
-  @include desktop{
+  @include desktop {
     font-size: 16px;
   }
 }
@@ -379,11 +384,11 @@
     @extend .popup-francise__input;
     height: 64px;
     resize: none;
-    @include desktop{
+    @include desktop {
       height: 84px;
     }
   }
-  @include desktop{
+  @include desktop {
     font-size: 14px;
     width: 368px;
     height: 42px;
@@ -393,7 +398,7 @@
 .popup-francise__btn {
   height: 42px;
   width: 114px;
-  @include desktop{
+  @include desktop {
     font-size: 14px;
     margin-top: 20px;
   }
